[tool.poetry]
name = "rag-llm"
version = "0.1.0"
description = ""
authors = ["Joanna Khek <joannakhek@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.10"
pandas = ">=1.3.5"
pyyaml = "^6.0.1"
numpy = "^1.21.4"
torch = {version = "^2.1.1+cu118", source = "pytorch-gpu-src"}
transformers = {extras = ["torch"], version = "^4.36.2"}
loguru = "^0.7.2"
langchain = "^0.1.3"
langchainhub = "^0.1.14"
chromadb = "^0.4.22"
cohere = "^4.44"
bs4 = "^0.0.2"
accelerate = "^0.26.1"
bitsandbytes = {url = "https://github.com/jllllll/bitsandbytes-windows-webui/releases/download/wheels/bitsandbytes-0.41.2.post2-py3-none-win_amd64.whl"}
chainlit = "^1.0.200"
langchain-experimental = "^0.0.49"
tabulate = "^0.9.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ipykernel = "^6.25.2"


[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"